@startuml

state kIdle #Orange : Drop route
state kRequestRoute : router.RequestRoute()
state kWaitingForRoute
state kDemo #LightGreen : RunDemo()
state kExitDemo : Release semaphore

[*] --> kIdle

kIdle --> kRequestRoute : demo mode

kRequestRoute --> kWaitingForRoute : Route pending ||\nno route found

kWaitingForRoute --> kDemo : Route ready
kWaitingForRoute --> kExitDemo : demo mode off

kDemo --> kRequestRoute : Route done
kDemo --> kExitDemo : demo mode off

kExitDemo --> kIdle

@enduml
